# FML

./: .gitignore  .markdownlint.jsonc  Cargo.toml  README.md  build  build.rs  fml  fml-old  rustfmt.toml
.cargo/: config-example.toml
.github/workflows/: audit.yml  ci.yml
benchmarks/: benchmarks-brainfuck.json  benchmarks-langtons_ant.bc  benchmarks-langtons_ant.bc.txt  benchmarks-langtons_ant.json  benchmarks-sudoku.bc  benchmarks-sudoku.bc.txt  benchmarks-sudoku.json
src/: bytecode.rs  fml.lalrpop  jit.rs  main.rs  parser.rs  tests.rs
src/bytecode/: bytecode.rs  compiler.rs  debug.rs  heap.rs  helpers.rs  interpreter.rs  mod.rs  opcodes.rs  program.rs  serializable.rs  state.rs
src/jit/: asm_encoding.rs  asm_repr.rs  memory.rs  memory_unix.rs  memory_windows.rs
src/parser/: mod.rs
src/tests/: asm_compiler.rs  asm_encoding.rs  bytecode.rs  compiler.rs  feeny.rs  interpreter.rs  jit_memory.rs  mod.rs  parser.rs
src/tests/data/: add_mem_imm.in  add_mem_reg.in  add_reg_imm.in  add_reg_mem.in  add_reg_reg.in  addlike.in  addressing_combinations.in  addressing_single_reg.in  and_mem_reg.in  and_reg_imm.in  and_reg_mem.in  and_reg_reg.in  call_abs_mem.in  call_abs_reg.in  call_rel.in  idiv_imul_1op.in  idiv_imul_2ops.in  jcc.in  jmp_rel.in  (+7 more)
tests/: make_bc_test.sh  make_bc_tests.sh  test_ast.sh  test_bc.sh  test_execute.sh  test_jit.sh  test_run.sh
tests/bc_test_1/: push_pop.fml
tests/bc_test_2/: condition.fml  function0.fml  function1.fml  function2.bc  function2.bc.txt  function2.fml  function2.json  function_globals.fml  function_globals.fml.disabled  function_with_globals.fml  function_with_locals.fml  globals.fml  locals.fml  loop.fml  recursive_function.fml
tests/bc_test_3/: arrays1.bc  arrays1.bc.txt  arrays1.json  dispatch.bc  dispatch.bc.txt  dispatch.json  getters_and_setters.bc  getters_and_setters.bc.txt  getters_and_setters.json  object.fml  operators.bc  operators.bc.txt  operators.json  operators_compat.bc  operators_compat.bc.txt  operators_compat.fml  operators_compat.json
tests/jit/: ackermann.bc  ackermann.bc.txt  ackermann.fml  ackermann.json  collatz.bc  collatz.bc.txt  collatz.fml  collatz.json  functions9.bc  functions9.bc.txt  functions9.fml  functions9.json  integer_functions.bc  integer_functions.bc.txt  integer_functions.fml  integer_functions.json  long_basic_block.bc  long_basic_block.bc.txt  long_basic_block.fml  long_basic_block.json  method_names.bc  method_names.bc.txt  method_names.fml  method_names.json  sum.bc  sum.bc.txt  sum.fml  sum.json
tests/misc/: arrays2.bc  arrays2.bc.txt  arrays2.json  conditionals.bc  conditionals.bc.txt  conditionals.json  escape.bc  escape.bc.txt  escape.json  fibonacci.bc  fibonacci.bc.txt  fibonacci.json  fizzbuzz_fun.bc  fizzbuzz_fun.bc.txt  fizzbuzz_fun.json  fizzbuzz_loop.bc  fizzbuzz_loop.bc.txt  fizzbuzz_loop.json  functions.bc  functions.bc.txt  functions.json  iterator.bc  iterator.bc.txt  iterator.json  literals.bc  literals.bc.txt  literals.json  loops.bc  loops.bc.txt  loops.json  roman.bc  roman.bc.txt  roman.json  spec.bc  spec.bc.txt  spec.json  stack.bc  stack.bc.txt  stack.json  variables.bc  (+2 more)
