[package]
name = "fml"
version = "2.0.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2021"

# LALRPOP preprocessing
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-lexpr = "0.1.0"
serde_yaml = "0.8.4"
anyhow = "1.0.37"
clap = "3.0.0-beta.2"
indexmap = "1.6.2"
