[package]
name = "fml"
version = "2.0.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2021"

# LALRPOP preprocessing
build = "build.rs"

[profile.dev]
# Abort on panic might be a better default:
# https://vorner.github.io/2018/07/22/dont_panic.html
# This makes backtraces useless, see .cargo/config-example.toml for a fix.
#panic = "abort"

[profile.dev.package."*"]
# Optimize deps but not this crate itself.
# This seems to improve performance in a lot of projects
# without meaningfully increasing incremental compile times because deps only change rarely.
# In fact it decreases them in projects that depend heavily on proc macros.
opt-level = 3

[profile.release]
#panic = "abort"

[dependencies]
anyhow = "1.0.37"
clap = { version = "4.1.4", features = ["derive"] }
indexmap = "1.6.2"
lalrpop-util = { version = "0.19.9", features = ["lexer"] }
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-lexpr = "0.1.0"
serde_yaml = "0.9.4"
smallvec = "1.10.0"
itertools = "0.10.5"
libc = "0.2.141"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[build-dependencies]
lalrpop = { version = "0.19.9", features = ["lexer"] }
